no longer trying to use record types